// =============================================
// HIRING PLATFORM - MAIN SERVICE
// Handles: Users, Jobs, Applications, Interviews, Offers
// Database: MySQL 8.0+
// =============================================

Project main_service {
  database_type: 'MySQL'
  Note: 'Main service handling users, jobs, applications, live interviews, and offers'
}

// ===================
// ENUMS
// ===================

Enum user_role {
  candidate
  recruiter
  hiring_manager
  admin
}

Enum job_status {
  draft
  open
  closed
  archived
}

Enum application_status {
  pending
  in_progress
  accepted
  rejected
  withdrawn
}

Enum phase_type {
  test
  interview
}

Enum interview_mode {
  online
  onsite
}

Enum interview_status {
  scheduled
  in_progress
  completed
  cancelled
  no_show
}

Enum offer_status {
  pending
  accepted
  declined
  expired
}

Enum notification_type {
  application_received
  phase_started
  test_completed
  interview_scheduled
  accepted
  rejected
  offer_sent
  offer_response
}

// ===================
// USERS
// ===================

Table users {
  id char(36) [pk]
  email varchar(255) [unique, not null]
  password_hash varchar(255) [not null]
  role user_role [not null, default: 'candidate']
  first_name varchar(100) [not null]
  last_name varchar(100) [not null]
  phone varchar(20)
  avatar_url text
  created_at timestamp
  updated_at timestamp
}

Table candidate_profiles {
  user_id char(36) [pk]
  resume_url text
  linkedin_url varchar(255)
  portfolio_url varchar(255)
  current_company varchar(255)
  current_title varchar(255)
  years_experience int
  skills json
  preferred_locations json
  salary_expectation varchar(50)
  available_from date
}

// ===================
// JOBS
// ===================

Table jobs {
  id char(36) [pk]
  title varchar(255) [not null]
  department varchar(100)
  description text
  requirements json
  location varchar(255)
  is_remote boolean [default: false]
  employment_type varchar(50)
  salary_min int
  salary_max int
  salary_currency varchar(3) [default: 'USD']
  status job_status [default: 'draft']
  created_by char(36)
  created_at timestamp
  updated_at timestamp
  closed_at timestamp
}

// ===================
// PIPELINE
// ===================

Table job_phases {
  id char(36) [pk]
  job_id char(36) [not null]
  phase_type phase_type [not null]
  name varchar(100) [not null]
  description text
  order_index int [not null]
  is_required boolean [default: true]
  duration_minutes int
  created_at timestamp
}

Table phase_tests {
  phase_id char(36) [pk]
  test_id char(36) [not null, note: 'References quiz_service.tests']
}

Table phase_interviews {
  phase_id char(36) [pk]
  interview_mode interview_mode [not null]
  location varchar(255)
  has_whiteboard boolean [default: false, note: 'Internal whiteboard implementation']
}

// ===================
// APPLICATIONS
// ===================

Table applications {
  id char(36) [pk]
  job_id char(36) [not null]
  candidate_id char(36) [not null]
  status application_status [default: 'pending']
  current_phase_id char(36)
  applied_at timestamp
  updated_at timestamp
}

Table application_phases {
  id char(36) [pk]
  application_id char(36) [not null]
  phase_id char(36) [not null]
  status varchar(20) [default: 'pending', note: 'pending, in_progress, passed, failed, skipped']
  started_at timestamp
  completed_at timestamp
  notes text
  score int
}

// ===================
// INTERVIEWS (Live)
// ===================

Table interviews {
  id char(36) [pk]
  application_phase_id char(36) [not null]
  scheduled_at timestamp [not null]
  duration_minutes int [default: 60]
  interview_mode interview_mode [not null]
  location varchar(255)
  whiteboard_session_id char(36) [note: 'Internal whiteboard session reference']
  status interview_status [default: 'scheduled']
  started_at timestamp
  ended_at timestamp
  created_at timestamp
}

Table interview_participants {
  id char(36) [pk]
  interview_id char(36) [not null]
  user_id char(36) [not null]
  role varchar(50)
  joined_at timestamp
  left_at timestamp
}

// ===================
// OFFERS
// ===================

Table offers {
  id char(36) [pk]
  application_id char(36) [unique, not null]
  title varchar(255) [not null]
  department varchar(100)
  salary int [not null]
  salary_currency varchar(3) [default: 'USD']
  bonus int
  equity varchar(100)
  start_date date
  benefits text
  additional_terms text
  status offer_status [default: 'pending']
  sent_at timestamp
  expires_at timestamp
  responded_at timestamp
  response_notes text
}

// ===================
// NOTIFICATIONS
// ===================

Table notifications {
  id char(36) [pk]
  user_id char(36) [not null]
  type notification_type [not null]
  title varchar(255) [not null]
  message text
  reference_type varchar(50)
  reference_id char(36)
  is_read boolean [default: false]
  created_at timestamp
}

// ===================
// RELATIONSHIPS
// ===================

Ref: candidate_profiles.user_id - users.id
Ref: jobs.created_by > users.id
Ref: job_phases.job_id > jobs.id
Ref: phase_tests.phase_id - job_phases.id
Ref: phase_interviews.phase_id - job_phases.id
Ref: applications.job_id > jobs.id
Ref: applications.candidate_id > users.id
Ref: applications.current_phase_id > job_phases.id
Ref: application_phases.application_id > applications.id
Ref: application_phases.phase_id > job_phases.id
Ref: interviews.application_phase_id > application_phases.id
Ref: interview_participants.interview_id > interviews.id
Ref: interview_participants.user_id > users.id
Ref: offers.application_id - applications.id
Ref: notifications.user_id > users.id

// ===================
// TABLE GROUPS
// ===================

TableGroup users_group {
  users
  candidate_profiles
}

TableGroup jobs_pipeline {
  jobs
  job_phases
  phase_tests
  phase_interviews
}

TableGroup applications_group {
  applications
  application_phases
}

TableGroup interviews_group {
  interviews
  interview_participants
}

TableGroup offers_notifications {
  offers
  notifications
}
